<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.chekushin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="com.mirea.chekushin.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/browser_fragment" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.mirea.chekushin.mireaproject.ui.calculator.FragmentCalculator"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_hardware"
        android:name="com.mirea.chekushin.mireaproject.ui.hardware.HardwareFragment"
        android:label="@string/menu_hardware"
        tools:layout="@layout/fragment_hardware" />
    <fragment
        android:id="@+id/nav_options"
        android:name="com.mirea.chekushin.mireaproject.ui.options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />
    <fragment
        android:id="@+id/nav_stories"
        android:name="com.mirea.chekushin.mireaproject.ui.stories.StoriesFragment"
        android:label="@string/menu_stories"
        tools:layout="@layout/fragment_stories" />
</navigation>